--- a/gdb/Makefile.in
+++ b/gdb/Makefile.in
@@ -2166,12 +2166,16 @@ init.c: $(INIT_FILES)
 	@rm -f init.c-tmp init.l-tmp
 	@touch init.c-tmp
 	@echo gdbtypes > init.l-tmp
+	@echo printcmd >> init.l-tmp
+	@echo cli_cmds >> init.l-tmp
 	@-LANG=C ; export LANG ; \
 	LC_ALL=C ; export LC_ALL ; \
 	echo $(INIT_FILES) | \
 	tr ' ' '\012' | \
 	sed \
 	    -e '/^gdbtypes.[co]$$/d' \
+	    -e '/^printcmd.[co]$$/d' \
+	    -e '/^cli_cmds.[co]$$/d' \
 	    -e '/^init.[co]$$/d' \
 	    -e '/xdr_ld.[co]$$/d' \
 	    -e '/xdr_ptrace.[co]$$/d' \
